# lfg

./: .gitignore  CLAUDE.md  README.md  dataset_generator.py  des_ratio_results.txt  large_heavy.csv  lh_high.csv  lh_low.csv  mempool_real.csv  mixed.csv  plot_results.py  prepare_mempool_data.py  readme_2026-05-09.md  report.md  report_2026-05-18.md  report_2026-05-22.md  results.txt  results_2026-05-24.md  results_real.txt  results_sweep.txt  small_heavy.csv  traffic_high.csv  traffic_low.csv  traffic_medium.csv
devnet/: network_params.yaml
sequencer/: Cargo.toml  des_all_txs.txt  des_optimal_verbose.txt  des_small_verbose.txt  fcfs_small_verbose.txt  run_experiments.ps1  run_experiments_real.ps1  run_sweep.ps1
sequencer/src/: batcher.rs  blob_sender.rs  config.rs  executor.rs  main.rs  mempool.rs  metrics.rs  ordering.rs  types.rs
